Screen overflow on mobile fixed

--- a/styles/components/header.less
+++ b/styles/components/header.less
@@ -30,6 +30,7 @@
   code {
     background: hsl(208, 56%, 10%);
     padding: 2px 4px;
+    white-space: pre-wrap;
   }
 }
 .docs-header p {
@@ -51,5 +52,8 @@
   .docs-header h1 {
     font-size: 60px;
     line-height: 1;
+  }
+  code {
+    white-space: pre-wrap;
   }
 }
